####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = box_checked.png box_clear.png box_crossed.png chat.png dataserve.png filetransfer.png game.png guarddog.desktop hi32-app-guarddog.png hi48-app-guarddog.png lo16-app-guarddog.png lo32-app-guarddog.png mail.png miscellaneous.png multimedia.png network.png terminal.png userdefined.png rate_limit.png warn.png logging.png protocols.png advanced.png zones.png laserwarn.png reference.png

install-data-local:
	$(mkinstalldirs) $(kde_datadir)/guarddog/pics/
	$(INSTALL_DATA) $(srcdir)/box_checked.png $(kde_datadir)/guarddog/pics/box_checked.png
	$(mkinstalldirs) $(kde_datadir)/guarddog/pics/
	$(INSTALL_DATA) $(srcdir)/box_clear.png $(kde_datadir)/guarddog/pics/box_clear.png
	$(mkinstalldirs) $(kde_datadir)/guarddog/pics/
	$(INSTALL_DATA) $(srcdir)/box_crossed.png $(kde_datadir)/guarddog/pics/box_crossed.png
	$(mkinstalldirs) $(kde_datadir)/guarddog/pics/
	$(INSTALL_DATA) $(srcdir)/chat.png $(kde_datadir)/guarddog/pics/chat.png
	$(mkinstalldirs) $(kde_datadir)/guarddog/pics/
	$(INSTALL_DATA) $(srcdir)/dataserve.png $(kde_datadir)/guarddog/pics/dataserve.png
	$(mkinstalldirs) $(kde_datadir)/guarddog/pics/
	$(INSTALL_DATA) $(srcdir)/filetransfer.png $(kde_datadir)/guarddog/pics/filetransfer.png
	$(mkinstalldirs) $(kde_datadir)/guarddog/pics/
	$(INSTALL_DATA) $(srcdir)/game.png $(kde_datadir)/guarddog/pics/game.png
	$(mkinstalldirs) $(kde_appsdir)/System/
	$(INSTALL_DATA) $(srcdir)/guarddog.desktop $(kde_appsdir)/System/guarddog.desktop
	$(mkinstalldirs) $(kde_icondir)/hicolor/32x32/apps/
	$(INSTALL_DATA) $(srcdir)/hi32-app-guarddog.png $(kde_icondir)/hicolor/32x32/apps/guarddog.png
	$(mkinstalldirs) $(kde_icondir)/hicolor/48x48/apps/
	$(INSTALL_DATA) $(srcdir)/hi48-app-guarddog.png $(kde_icondir)/hicolor/48x48/apps/guarddog.png
	$(mkinstalldirs) $(kde_icondir)/locolor/16x16/apps/
	$(INSTALL_DATA) $(srcdir)/lo16-app-guarddog.png $(kde_icondir)/locolor/16x16/apps/guarddog.png
	$(mkinstalldirs) $(kde_icondir)/locolor/32x32/apps/
	$(INSTALL_DATA) $(srcdir)/lo32-app-guarddog.png $(kde_icondir)/locolor/32x32/apps/guarddog.png
	$(mkinstalldirs) $(kde_datadir)/guarddog/pics/
	$(INSTALL_DATA) $(srcdir)/mail.png $(kde_datadir)/guarddog/pics/mail.png
	$(mkinstalldirs) $(kde_datadir)/guarddog/pics/
	$(INSTALL_DATA) $(srcdir)/miscellaneous.png $(kde_datadir)/guarddog/pics/miscellaneous.png
	$(mkinstalldirs) $(kde_datadir)/guarddog/pics/
	$(INSTALL_DATA) $(srcdir)/multimedia.png $(kde_datadir)/guarddog/pics/multimedia.png
	$(mkinstalldirs) $(kde_datadir)/guarddog/pics/
	$(INSTALL_DATA) $(srcdir)/network.png $(kde_datadir)/guarddog/pics/network.png
	$(mkinstalldirs) $(kde_datadir)/guarddog/pics/
	$(INSTALL_DATA) $(srcdir)/terminal.png $(kde_datadir)/guarddog/pics/terminal.png
	$(mkinstalldirs) $(kde_datadir)/guarddog/pics/
	$(INSTALL_DATA) $(srcdir)/userdefined.png $(kde_datadir)/guarddog/pics/userdefined.png
	$(mkinstalldirs) $(kde_datadir)/guarddog/pics/
	$(INSTALL_DATA) $(srcdir)/rate_limit.png $(kde_datadir)/guarddog/pics/rate_limit.png
	$(mkinstalldirs) $(kde_datadir)/guarddog/pics/
	$(INSTALL_DATA) $(srcdir)/warn.png $(kde_datadir)/guarddog/pics/warn.png
	$(mkinstalldirs) $(kde_datadir)/guarddog/pics/
	$(INSTALL_DATA) $(srcdir)/logging.png $(kde_datadir)/guarddog/pics/logging.png
	$(mkinstalldirs) $(kde_datadir)/guarddog/pics/
	$(INSTALL_DATA) $(srcdir)/protocols.png $(kde_datadir)/guarddog/pics/protocols.png
	$(mkinstalldirs) $(kde_datadir)/guarddog/pics/
	$(INSTALL_DATA) $(srcdir)/advanced.png $(kde_datadir)/guarddog/pics/advanced.png
	$(mkinstalldirs) $(kde_datadir)/guarddog/pics/
	$(INSTALL_DATA) $(srcdir)/zones.png $(kde_datadir)/guarddog/pics/zones.png
	$(mkinstalldirs) $(kde_datadir)/guarddog/pics/
	$(INSTALL_DATA) $(srcdir)/laserwarn.png $(kde_datadir)/guarddog/pics/laserwarn.png
	$(mkinstalldirs) $(kde_datadir)/guarddog/pics/
	$(INSTALL_DATA) $(srcdir)/reference.png $(kde_datadir)/guarddog/pics/reference.png

uninstall-local:
	-rm -f $(kde_datadir)/guarddog/pics/box_checked.png
	-rm -f $(kde_datadir)/guarddog/pics/box_clear.png
	-rm -f $(kde_datadir)/guarddog/pics/box_crossed.png
	-rm -f $(kde_datadir)/guarddog/pics/chat.png
	-rm -f $(kde_datadir)/guarddog/pics/dataserve.png
	-rm -f $(kde_datadir)/guarddog/pics/filetransfer.png
	-rm -f $(kde_datadir)/guarddog/pics/game.png
	-rm -f $(kde_appsdir)/System/guarddog.desktop
	-rm -f $(kde_icondir)/hicolor/32x32/apps/guarddog.png
	-rm -f $(kde_icondir)/hicolor/48x48/apps/guarddog.png
	-rm -f $(kde_icondir)/locolor/16x16/apps/guarddog.png
	-rm -f $(kde_icondir)/locolor/32x32/apps/guarddog.png
	-rm -f $(kde_datadir)/guarddog/pics/mail.png
	-rm -f $(kde_datadir)/guarddog/pics/miscellaneous.png
	-rm -f $(kde_datadir)/guarddog/pics/multimedia.png
	-rm -f $(kde_datadir)/guarddog/pics/network.png
	-rm -f $(kde_datadir)/guarddog/pics/terminal.png
	-rm -f $(kde_datadir)/guarddog/pics/userdefined.png
	-rm -f $(kde_datadir)/guarddog/pics/rate_limit.png
	-rm -f $(kde_datadir)/guarddog/pics/warn.png
	-rm -f $(kde_datadir)/guarddog/pics/logging.png
	-rm -f $(kde_datadir)/guarddog/pics/protocols.png
	-rm -f $(kde_datadir)/guarddog/pics/advanced.png
	-rm -f $(kde_datadir)/guarddog/pics/zones.png
	-rm -f $(kde_datadir)/guarddog/pics/laserwarn.png
	-rm -f $(kde_datadir)/guarddog/pics/reference.png

####### kdevelop will overwrite this part!!! (end)############
