####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = index.docbook guarddog2_protocol.png guarddog2_zonedia.png guarddog2_zones.png guarddog2_routerdia.png 

####### kdevelop will overwrite this part!!! (end)############

KDE_LANG = es
KDE_DOCS = guarddog
KDE_XSL_STYLESHEET = 
